feat: Maps 3D Compose Wrapper and Samples (#39)
* feat: Implement Maps 3D Compose wrapper, sample catalog, and visual testing

* feat: Implement Hello Map sample as a separate activity centered on Flatirons

* feat: Switch Hello Map location to Delicate Arch and fix visual test

* feat: Calibrate camera pose for Delicate Arch in HelloMapActivity

* chore: Add visual test examples and gradle daemon properties

* feat: Add Camera Controls activity and calibrate for Seattle

* feat: Add Map Interactions sample calibrated for Denver Capitol

* refactor: Reorder parameters in GoogleMap3D to follow Compose convention

* test: Use conventional UiAutomator testing for Map Interactions fallback

* test: Verify Markers sample with visual test

* test: Verify Markers sample with popover and extruded marker

* feat: Export all sample activities in manifest

* feat: Remove unnecessary Back buttons from sample activities

* feat: Support onClick callback in MarkerConfig and use it in MarkersActivity

* refactor: Clean up fully qualified class names in DataModels and MarkersActivity

* feat: Migrate Sanitas Loop polyline to maps3d-compose

- Added PolylineConfig enhancements (drawsOccludedSegments, onClick).
- Created PolylinesActivity with Sanitas Loop demo (double polyline, hovering).
- Wired click listener to show Toast via rememberCoroutineScope.
- Removed useless MAPS_API_KEY warning from build files.

* fix: Remove extra brace in build.gradle.kts files

* build: Add installAndLaunch task to maps3d-compose-demo

* feat: Add extruded museum and click support to Polygons example

- Added extruded museum building to PolygonsActivity.kt using a custom extrusion helper.
- Added onClick callback to PolygonConfig in DataModels.kt and handled it in Map3DState.kt.
- Updated PolygonsActivity.kt to use click listeners on the zoo and museum polygons.
- Expanded unit tests in MappersTest.kt to cover default values.
- Cleaned up fully qualified names in DataModels.kt.
- Added missing impor